<resources>
    <string name="app_name">Risk Detector</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="home">Home</string>
    <string name="map_view">Map View</string>
    <string name="call_doctor">Call Doctor</string>
    <string name="announce">Announce</string>
    <string name="settings">Settings</string>
    <string name="risky_area">Risky Area</string>
    <string name="dashboard_title">Coronavirus Updates</string>
    <string name="doctor_list">Doctors List</string>
    <string name="announcement">Announcement</string>

    <!--    <string name="channel_name">Channel name</string>-->
    <!--    <string name="channel_description">Channel description</string>-->
    <!--    <string name="snooze">Snooze</string>-->

    <string name="title_activity_maps_fragment">Map</string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your name</string>
    <string name="degree">Degree</string>
    <string name="working_place">Working Place</string>
    <string name="specialized_in">Specialized In</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="location_want_to_serve_in">Location want to serve in</string>
    <string name="add_volunteer_doctor">Add Volunteer Doctor</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="minimum_distance_alarm">Minimum Distance Alarm</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="type_range">Type Range (In Meter)</string>
    <string name="type_rate">Type Rate (In Second)</string>
    <string name="medicine">Medicine</string>
    <string name="welcome_message">Welcome. This tool allows you to evaluate for yourself whether you are infected with the Covid-19 or Novel Corona virus. You can even find out about your risk level and what to do. This software has been developed in accordance with the guidelines of the World Health Organization. However, in no case can the results obtained from this software be considered as health advice by an experienced doctor. The information you share in the software will be kept confidential.</string>
    <string name="loading_dot">...</string>
    <string name="all">All</string>
    <string-array name="specialized_in">
        <item>Select</item>
        <item>Medicine</item>
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Endocrinologist</item>
        <item>Gynecologist</item>
        <item>Microbiologist</item>
        <item>Neurologist</item>
    </string-array>
    <string-array name="location_list">
        <item>Dhaka</item>
        <item>Bangladesh</item>
    </string-array>
</resources>
