<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Add  Volunteer Doctor"
                android:textColor="@color/white"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/txt_view_margin_5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/full_name"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/degree"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="MBBS, FCPS, BCS"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/working_place"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtWorkInPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="Where you work"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/specialized_in"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:orientation="horizontal"
                android:weightSum="2"
                >

                <Spinner
                    android:id="@+id/txtSpecializedIn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1.6"
                    android:background="@color/transparent"
                    android:padding="@dimen/txt_view_margin_15"
                    android:spinnerMode="dropdown"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/ivSpinnerArrow"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight=".4"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/email"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="yourname@email.com"
                android:inputType="textEmailAddress"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/mobile_number"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="017xxxxxxxx"
                android:inputType="number"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_5"
                android:text="@string/location_want_to_serve_in"
                android:textColor="@color/darkjunglegreen"
                android:textSize="@dimen/txtview_toolbar_title_22sp" />

            <EditText
                android:id="@+id/txtLocationWantToServe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:background="@drawable/edittext_custom_background_gray"
                android:hint="Where you want to work"
                android:padding="@dimen/txt_view_margin_15"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/txt_view_margin_10"
                android:layout_marginTop="@dimen/txt_view_margin_15"
                android:layout_marginRight="@dimen/txt_view_margin_10"
                android:layout_marginBottom="@dimen/txt_view_margin_15"
                android:background="@drawable/button_background_blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/txt_view_margin_15"
                android:text="Submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txtview_toolbar_title_22sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>